[project]
name = "py-automl-lib"
version = "2.2.1"
authors = [
  { name="Owen O'D"},
]
description = "Python package for automated hyperparameter-optimization of common machine-learning algorithms"
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
  "catboost",
  "xgboost",
  "lightgbm==4.1.0",
  "optuna",
  "scikit-learn",
  "numpy",
  "pandas",
  "SQLAlchemy",
  
]

[project.optional-dependencies]
  shap = ["shap"]

[project.urls]
Homepage = "https://github.com/owenodriscoll/AutoML"
