[project]
name = "py-automl-lib"
version = "2.2.8"
authors = [
  { name="Owen O'D"},
]
description = "Python package for automated hyperparameter-optimization of common machine-learning algorithms"
readme = "README.md"
requires-python = ">=3.11.0,<3.13.0"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
  "catboost",
  "xgboost",
  "lightgbm",
  "optuna",
  "scikit-learn",
  "numpy",
  "pandas",
  "SQLAlchemy",
  "timeout-decorator",
  "fastparquet",
  "pyarrow",
]

[project.optional-dependencies]
  shap = ["shap"]

[project.urls]
Homepage = "https://github.com/owenodriscoll/AutoML"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"